# Histogram

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Core.cpp  Core.h  FileController.cpp  FileController.h  MainWindow.cpp  MainWindow.h  TopController.cpp  TopController.h  main.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h
src/qml/: main.qml  qml.qrc
src/qml/widgets/: Custom_Button.qml  Custom_Label.qml  Custom_ProgressBar.qml  Custom_TextField.qml  qmldir
